Wed Jul 03 12:39:15 BST 2002  Olly Betts <olly@survex.com>

	* NEWS: incorporated recent changes into provisional version.

	* docs/: sorted out make rules for running doxygen; don't tell doxygen
	  to build man pages which we aren't using.

Tue Jul 02 16:36:54 BST 2002  Olly Betts <olly@survex.com>

	* docs/: run through ispell; fixed OM_MOP to OmQuery::OP; other
	  corrections.

Fri Jun 28 02:59:49 BST 2002  Olly Betts <olly@survex.com>

	* Backend "auto" now works when creating an OmWritableDatabase which
	  doesn't already exist - it'll pick a backend which supports writing
	  and is compiled in (currently this means quartz).

Thu Jun 27 20:31:13 BST 2002  Richard Boulton <richard@tartarus.org>

	* backends/quartz/btreetest.cc (sequent1): Add regression test for
	  recently fixed bug with sequential addition.
	* backends/quartz/z_data/ordnum[+-]: Data files for new test.

Thu Jun 27 13:13:37 BST 2002  Olly Betts <olly@survex.com>

	* Documentation fettling: removed docs/Notes and
	  docs/coding_policy.txt moving relevant content into HACKING,
	  common/postlist.h, docs/todo.xml, and include/om/omtypes.h; install
	  docs as PostScript rather than DVI; include text docs in tarball and
	  install them; "make dist" will now fail if a tool needed to build
	  docs is missing; removed last vestiges of Doc++ support;
	  doc/Makefile no longer uses include (include isn't portable);
	  improved doc/tests.txt. 

Thu Jun 27 12:10:37 BST 2002  Olly Betts <olly@survex.com>

	* apitest: doesn't directly use anything from utils.h, so don't
	  #include it.

Thu Jun 27 12:05:53 BST 2002  Olly Betts <olly@survex.com>

	* Removed includetest - it was useful early in development, but isn't
	  really now.

Wed Jun 26 22:09:57 BST 2002  Olly Betts <olly@survex.com>

	* apitest: deldoc2 and deldoc3 now pass when the library is compiled
	  with --enable-debug.

Wed Jun 26 19:35:56 BST 2002  Olly Betts <olly@survex.com>
